--- a/css/SuggestionsPage.css
+++ b/css/SuggestionsPage.css
@@ -1,20 +1,34 @@
 body
 {
-	background-color: #d9b3ff;
+	background-color: white;
 	margin-top: 4%;
 	font-size: 1.3em;
+}
 
-
+#suggestedArea{
+	display: flex;
+	flex-direction: row;
+	margin-left: 20%;
 }
 h2
 {
-	color: #cc0066;
+	color: black;
+	text-align: center;
 }
+
 #suggestions,#crime,#schools,#grocery,#transport,#income,#houses
 {
-	text-align: center;
+	</* text-align: center; */>
 	margin-top: 3%;
 }
+
+.area{
+	margin: 30px;
+	border:solid;
+	padding: 10px;
+}
+
+
 @media only screen and (max-device-width:450px) 
 {
 	#suggestions,#crime,#schools,#grocery,#transport,#income,#houses
