--- a/less/index.less
+++ b/less/index.less
@@ -1,49 +1,4 @@
-@imageurl: "../image/seattle.jpg";
-@padding: 10px;
-@margine: 10px;
-@fontfamily: 'Muli',
-sans-serif;
-@startBtnClo: #4CAF50;
-@btnWidth: 200px;
-
-/* added by neha */
-
-* {
-    box-sizing: border-box;
-}
-
-#main {
-    padding: @padding;
-    background-image: url(@imageurl);
-    background-attachment: fixed;
-    background-position: top;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-
 /* modified by neha */
-
-.indexPageAction {
-    background-color: @startBtnClo;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 12px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 12px;
-    width: @btnWidth;
-    transition: all 0.5s;
-    margin-left: 5px;
-    margin-bottom: 5px;
-}
-
-
-/* added by neha */
 
 #nav {
     img {
@@ -51,101 +6,90 @@ sans-serif;
         height: auto;
         padding: 10px;
     }
-}
-
-
-/* nesting modified by neha */
-
-#descr {
-    margin: @margine;
-    padding: @padding;
-    font-family: @fontfamily;
-    font-size: 16px;
-    color: white;
-    h1 {
-        font-size: 30px;
-        text-align: center;
+    #down {
+        margin: auto;
+        margin-top: 2%;
+        .line {
+            width: 35px;
+            height: 5px;
+            background-color: #b5b5b5;
+            margin: 6px 0;
+        }
+        #down-icon {
+            margin-left: 230%;
+        }
+        #down-content {
+            display: none;
+            position: absolute;
+            background-color: #707070;
+            z-index: 1;
+        }
+        #down-content a {
+            color: #ffffff;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            text-align: left;
+        }
     }
-    h2 {
-        text-align: center;
-    }
-}
-
-#start {
-    width: 100%;
-}
-
-
-/* nesting modified by neha */
-
-#startbtn {
-    .indexPageAction();
-    margin-left: 20px;
-    span {
-        cursor: pointer;
-        display: inline-block;
-        position: relative;
-        transition: 0.5s;
-    }
-    span:after {
-        content: '\00bb';
-        position: absolute;
-        opacity: 0;
-        top: 0;
-        right: -20px;
-        transition: 0.5s;
-    }
-    &:hover span {
-        padding-right: 25px;
-    }
-    &:hover span:after {
-        opacity: 1;
-        right: 0;
+    #down-content-desktop {
+        display: none;
     }
 }
 
-#features {
-    margin-top: 50px;
-    margin-bottom: 200px;
-    padding: 10px;
-    display: flex;
+
+/* mobile orientation: landscape */
+
+@media only screen and (min-device-width: 314px) and (max-device-width: 768px) and (orientation: landscape) {
+    #nav {
+        #down {
+            margin-left: 55%;
+        }
+    }
 }
 
 
-/* added by neha */
+/* ipad orientation: potrait */
 
-.feature {
-    #descr();
-    display: inline-block;
-    margin: 10px;
-}
-
-@media only screen and (min-width: 768px) {
-    #startbtn {
-        margin-left: 40%;
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+    #nav {
+        #down {
+            margin-left: 65%;
+        }
     }
 }
 
-@media only screen and (min-width: 768px) {
-    #suggesbtn {
-        margin-top: 50px;
-    }
-    #findbtn {
-        #suggesbtn();
-    }
-    #compbtn {
-        #suggesbtn();
+
+/* ipad orientation: landscape */
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+    #nav {
+        #down {
+            margin-left: 75%;
+        }
     }
 }
 
-@media only screen and (min-width: 768px) {
-    #suggestion {
-        width: 30%;
+
+/*Desktop*/
+
+@media only screen and (min-width: 1025px) {
+    #nav {
+        #down {
+            display: none;
+        }
+        #down-content-desktop {
+            display: block;
+            margin-left: 10%;
+            padding: 2% 0 0 0;
+        }
     }
-    #find {
-        #suggestion();
-    }
-    #comparation {
-        #suggestion();
+    #features {
+        display: flex;
+        flex-direction: col;
+        justify-content: space-around;
     }
 }
+
+
+/* end neha */
