adding less files, index.html, header footer external load

--- a/less/index.less
+++ b/less/index.less
@@ -1,93 +1,33 @@
 /* modified by neha */
 
-#nav {
-    img {
-        width: 110px;
-        height: auto;
-        padding: 10px;
+
+
+#indexMain {
+    #descr {
+        position: relative;
+        top: -10px;
     }
-    #down {
-        margin: auto;
-        margin-top: 2%;
-        .line {
-            width: 35px;
-            height: 5px;
-            background-color: #b5b5b5;
-            margin: 6px 0;
+   /* .feature {
+        button {
+            padding: 6%;
+            margin-top: 0;
         }
-        #down-icon {
-            margin-left: 230%;
-        }
-        #down-content {
-            display: none;
-            position: absolute;
-            background-color: #707070;
-            z-index: 1;
-        }
-        #down-content a {
-            color: #ffffff;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            text-align: left;
-        }
-    }
-    #down-content-desktop {
-        display: none;
-    }
+    }*/
 }
 
 
-/* mobile orientation: landscape */
-
-@media only screen and (min-device-width: 314px) and (max-device-width: 768px) and (orientation: landscape) {
-    #nav {
-        #down {
-            margin-left: 55%;
-        }
-    }
-}
-
-
-/* ipad orientation: potrait */
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-    #nav {
-        #down {
-            margin-left: 65%;
-        }
-    }
-}
-
-
-/* ipad orientation: landscape */
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
-    #nav {
-        #down {
-            margin-left: 75%;
-        }
-    }
-}
 
 
 /*Desktop*/
 
 @media only screen and (min-width: 1025px) {
-    #nav {
-        #down {
-            display: none;
+    
+    #indexMain {
+        #features {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
         }
-        #down-content-desktop {
-            display: block;
-            margin-left: 10%;
-            padding: 2% 0 0 0;
-        }
-    }
-    #features {
-        display: flex;
-        flex-direction: col;
-        justify-content: space-around;
     }
 }
 
