updated leass files

--- a/less/layout.less
+++ b/less/layout.less
@@ -72,6 +72,11 @@
     }
 }
 
+.mobileLayout {
+    display: flex;
+    flex-direction: column;
+}
+
 
 /* mobile orientation: landscape */
 
@@ -131,5 +136,11 @@
     }
 }
 
+@media only screen and (min-width: 1025px) {
+    .desktopLayout {
+        display: flex;
+        flex-direction: row;
+    }
+}
 
 /* end neha */
