--- a/less/brand.less
+++ b/less/brand.less
@@ -1,33 +1,36 @@
 /*Colors*/
-@brandBgColor:#050F1E;
-@brandTextColor:#ffffff;
-
-@headerFooterTextColor:#ffffff;
+@brandBgColor: #050F1E;
+@brandTextColor: #ffffff;
+@headerFooterTextColor: #ffffff;
 @headerFooterBgColor: #000000;
-
-@brandButtonBgColor:#2E73AC;
-@brandButtonTextColor:#ffffff;
-
-@linkTextColor:#ffffff;
-
-
+@brandButtonBgColor: #2E73AC;
+@brandButtonTextColor: #ffffff;
+@linkTextColor: #ffffff;
+@graphicBgColor: rgb(0, 51, 102);
 footer,
 header {
-    color:@headerFooterTextColor;
-    background-color:@headerFooterBgColor;
+    color: @headerFooterTextColor;
+    background-color: @headerFooterBgColor;
 }
 
-button{
-	background-color:@brandButtonBgColor;
-	color:@brandButtonTextColor;
+button {
+    background-color: @brandButtonBgColor;
+    color: @brandButtonTextColor;
 }
 
-#descr{
-	background-color:@brandBgColor;
-	color:@brandTextColor;
+#descr {
+    background-color: @brandBgColor;
+    color: @brandTextColor;
 }
 
+a {
+    color: @linkTextColor;
+}
 
-a{
-	color:@linkTextColor;
+.graphicsWrapper {
+    background-color: @graphicBgColor;
+}
+
+h2 {
+    color: @brandTextColor;
 }
