--- a/css/index.css
+++ b/css/index.css
@@ -1,69 +1,21 @@
 /* modified by neha */
-#nav img {
-  width: 110px;
-  height: auto;
-  padding: 10px;
+#indexMain {
+  /* .feature {
+        button {
+            padding: 6%;
+            margin-top: 0;
+        }
+    }*/
 }
-#nav #down {
-  margin: auto;
-  margin-top: 2%;
-}
-#nav #down .line {
-  width: 35px;
-  height: 5px;
-  background-color: #b5b5b5;
-  margin: 6px 0;
-}
-#nav #down #down-icon {
-  margin-left: 230%;
-}
-#nav #down #down-content {
-  display: none;
-  position: absolute;
-  background-color: #707070;
-  z-index: 1;
-}
-#nav #down #down-content a {
-  color: #ffffff;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-#nav #down-content-desktop {
-  display: none;
-}
-/* mobile orientation: landscape */
-@media only screen and (min-device-width: 314px) and (max-device-width: 768px) and (orientation: landscape) {
-  #nav #down {
-    margin-left: 55%;
-  }
-}
-/* ipad orientation: potrait */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-  #nav #down {
-    margin-left: 65%;
-  }
-}
-/* ipad orientation: landscape */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
-  #nav #down {
-    margin-left: 75%;
-  }
+#indexMain #descr {
+  position: relative;
+  top: -10px;
 }
 /*Desktop*/
 @media only screen and (min-width: 1025px) {
-  #nav #down {
-    display: none;
-  }
-  #nav #down-content-desktop {
-    display: block;
-    margin-left: 10%;
-    padding: 2% 0 0 0;
-  }
-  #features {
+  #indexMain #features {
     display: flex;
-    flex-direction: col;
+    flex-direction: row;
     justify-content: space-around;
   }
 }
