--- a/less/brand.less
+++ b/less/brand.less
@@ -1,8 +1,10 @@
 /*Colors*/
+@white:#fff;
+@red:#f44336;
 @brandBgColor: #050F1E;
 @brandTextColor: #ffffff;
-@headerFooterTextColor: #ffffff;
-@headerFooterBgColor: #000000;
+@headerFooterTextColor: #000!important;
+@headerFooterBgColor:  #fff!important;
 @brandButtonBgColor: #2E73AC;
 @brandButtonTextColor: #ffffff;
 @linkTextColor: #ffffff;
@@ -33,4 +35,17 @@ a {
 
 h2 {
     color: @brandTextColor;
+}
+
+.lf-text-color{
+    color:@brandTextColor;
+}
+
+.lf-white{
+    color: @white;
+}
+
+.lf-red{
+    color: @white !important;
+    background-color:@red!important;
 }
