--- a/less/index.less
+++ b/less/index.less
@@ -1,35 +1,10 @@
-/* modified by neha */
-
-
-
-#indexMain {
-    #descr {
-        position: relative;
-        top: -10px;
-    }
-   /* .feature {
-        button {
-            padding: 6%;
-            margin-top: 0;
-        }
-    }*/
+.bg-main {
+    background-position: center;
+    background-size: cover;
+    background-image: url("../image/NightSeattle2.jpg");
+    min-height: 100%;
 }
 
-
-
-
-/*Desktop*/
-
-@media only screen and (min-width: 1025px) {
-    
-    #indexMain {
-        #features {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-around;
-        }
-    }
+.display-main{
+    position: relative;
 }
-
-
-/* end neha */
