--- a/less/layout.less
+++ b/less/layout.less
@@ -1,5 +1,11 @@
 /* added by neha */
 
+body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+body, html {
+    height: 100%;
+    line-height: 1.8;
+}
+
 .main div{
     margin-left: 5%;
     margin-right: 5%;
@@ -13,6 +19,7 @@
 #descr.rowLayout {
     justify-content: center;
 }
+
 
 .colLayout {
     display: flex;
@@ -42,8 +49,8 @@
     #down {
         margin: auto;
         margin-top: 2%;
-       /* margin-bottom: 2%;
-        margin-left: 70%;*/
+        /* margin-bottom: 2%;
+         margin-left: 70%;*/
         .line {
             width: 35px;
             height: 5px;
@@ -72,10 +79,126 @@
     }
 }
 
+
 .mobileLayout {
     display: flex;
     flex-direction: column;
 }
+
+/*new Styles */
+.grayscale-min{
+    filter: grayscale(50%);
+}
+
+
+.position-left{
+    position: absolute;
+    top: 40%;
+    left: 0%;
+    transform: translate(0%,-50%);
+}
+
+.position-bottomleft {
+     position: absolute;
+     left: 0;
+     bottom: 0;
+ }
+
+.position-bottomright {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+position-bottom {
+    position: absolute;
+    right:0;
+    left:0;
+    bottom: 0;
+}
+
+.position-right{
+    float: right!important;
+}
+
+
+
+.lf-button{
+    border: none;
+    display: inline-block;
+    outline: 0;
+    padding: 10px 16px;
+    vertical-align: middle;
+    overflow: hidden;
+    text-decoration: none;
+    color: inherit;
+    background-color: inherit;
+    text-align: center;
+    cursor: pointer;
+    white-space: nowrap;
+    font-weight: lighter;
+}
+
+.lf-button:hover {
+    color: #000 !important;
+    background-color: #ccc !important;
+}
+
+
+a .header-link{
+    color:#fff!important;
+}
+
+.wide{
+    letter-spacing: 4px;
+}
+
+
+.text-large {
+    font-size: 18px !important;
+}
+
+.text-xxxlarge {
+    font-size: 48px !important;
+}
+
+.text-lighter{
+    font-weight: lighter;
+}
+
+.lf-padding-large {
+    padding: 12px 24px!important;
+}
+
+.lf-margin-top {
+    margin-top: 16px!important;
+}
+
+.lf-margin-top-xl {
+    margin-top: 20px!important;
+}
+
+.lf-large {
+    font-size: 18px!important;
+}
+
+.lf-opacity, .lf-hover-opacity:hover {
+    opacity: 0.60;
+}
+
+.fa{
+    padding:4px;
+}
+
+/*end new styles */
+
+@media only screen and (min-width: 1025px) {
+    .desktopLayout {
+        display: flex;
+        flex-direction: row;
+    }
+}
+
 
 
 /* mobile orientation: landscape */
@@ -120,12 +243,15 @@
         }
         #down-content-desktop {
             display: block;
-            margin-left: 10%;
-            padding: 2% 0 0 0;
+            width: 100%;
+           rigth: 0;
+            /* margin-left: 10%;
+           padding: 2% 0 0 0;
             width: 100%;
             a {
                 margin: 10%;
             }
+            */
         }
     }
     #indexMain {
@@ -133,13 +259,6 @@
             width: 25%;
             padding: 2%;
         }
-    }
-}
-
-@media only screen and (min-width: 1025px) {
-    .desktopLayout {
-        display: flex;
-        flex-direction: row;
     }
 }
 
