--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,11 @@
    }
 }
 */
+/*Added by Sirisha*/
+/*To stop horizontal scrolling in mobile*/
+html {
+    overflow-x: hidden;
+}
 .bg-main {
   background-position: center;
   background-size: cover;
@@ -22,17 +27,67 @@
 .display-main {
   position: relative;
 }
+
+.cardButton{
+    background-color: indianred;
+    border: 2px solid #757575;
+    box-shadow:5px 5px 2px #888888 ;
+    width: 20%;
+    height: 3rem;
+    margin-bottom: 2%;
+}
 /*Desktop*/
-/*
+
 @media only screen and (min-width: 1025px) {
-    
-    #indexMain {
+
+    /*#indexMain {
         #features {
             display: flex;
             flex-direction: row;
             justify-content: space-around;
         }
+    }*/
+
+    /*Start by sirisha*/
+    #optionsSection{
+        height: 42rem;
     }
+    #optionsSection h2{
+        margin-top: 3%;
+    }
+    .cardButton {
+        width: 30%;
+        margin-bottom: 2%;
+        margin-left: 30%;
+    }
+    .card {
+        margin: 2% 4%;
+        box-shadow: 10px 10px 5px #888888;
+        height: 28rem;
+
+    }
+    img {
+        opacity: 0.9;
+        display: block;
+        width: 100%;
+        height: 40%;
+        cursor: pointer;
+    }
+    .card:hover img {
+        opacity: 0.7;
+    }
+
+    .card-block{
+        text-align: center;
+    }
+    .card-group{
+        margin: 2% 4%;
+    }
+    .cardButton{
+        width: 40%;
+        height: 3rem;
+        margin-bottom: 7%;
+    }
+    /*end by Sirisha*/
 }
-*/
 /* end neha */
