--- a/less/index.less
+++ b/less/index.less
@@ -1,3 +1,6 @@
+//start by sirisha
+//card section styling
+
 .bg-main {
     background-position: center;
     background-size: cover;
@@ -8,3 +11,55 @@
 .display-main{
     position: relative;
 }
+ // start add by sirisha
+ //start by Sirisha
+
+html{
+    overflow-x: hidden;
+}
+/*Desktop*/
+
+@media only screen and (min-width: 1025px) {
+
+  //start by Sirisha
+  #optionsSection{
+    height: 42rem;
+  }
+  .cardButton{
+    width: 30%;
+    margin-bottom: 2%;
+    margin-left:30%
+  }
+  .card{
+    margin: 2% 4%;
+    box-shadow: 10px 10px 5px #888888;
+    height: 28rem;
+  }
+
+  #optionsSection h2{
+    margin-top: 3%;
+  }
+  img {
+    opacity: 0.9;
+    display: block;
+    width: 100%;
+    height: 40%;
+    cursor:pointer;
+  }
+  .card:hover img {
+    opacity: 0.7;
+  }
+
+  .card-block{
+    text-align: center;
+  }
+  .card-group{
+    margin: 2% 4%;
+  }
+  .cardButton{
+    width: 40%;
+    height: 3rem;
+    margin-bottom: 7%;
+  }
+}
+  /*end by Sirisha*/
