--- a/less/layout.less
+++ b/less/layout.less
@@ -60,12 +60,7 @@ body, html {
         #down-icon {
             margin-left: 230%;
         }
-        #down-content {
-            display: none;
-            position: absolute;
-            background-color: #707070;
-            z-index: 1;
-        }
+        
         #down-content a {
             color: #ffffff;
             padding: 12px 16px;
@@ -79,6 +74,12 @@ body, html {
     }
 }
 
+#down-content {
+    display: none;
+    position: absolute;
+    background-color: #707070;
+    z-index: 1;
+}
 
 .mobileLayout {
     display: flex;
@@ -121,7 +122,10 @@ position-bottom {
     float: right!important;
 }
 
-
+.position-topright{
+    top:0;
+    right:0;
+}
 
 .lf-button{
     border: none;
@@ -154,6 +158,15 @@ a .header-link{
 }
 
 
+.text-right{
+    text-align: right!important;
+}
+
+
+.text-left{
+    text-align: left!important;
+}
+
 .text-large {
     font-size: 18px !important;
 }
@@ -175,7 +188,11 @@ a .header-link{
 }
 
 .lf-margin-top-xl {
-    margin-top: 20px!important;
+    margin-top:  30px!important;
+}
+
+.lf-margin-top-large {
+    margin-top: 28px!important;
 }
 
 .lf-large {
@@ -189,6 +206,37 @@ a .header-link{
 .fa{
     padding:4px;
 }
+
+
+
+.lf-sidebar{
+    height: 100%;
+    width: 200px;
+    position: fixed!important;
+    z-index: 1;
+    overflow: auto;
+}
+
+.lf-card {
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+}
+
+.lf-animate-right {
+    position: relative;
+    animation: animateright 0.4s;
+}
+@keyframes animateright{
+    0% {
+        right: -800px;
+        opacity: 0;
+    }
+
+    100% {
+        right: 0;
+        opacity: 1;
+    }
+}
+
 
 /*end new styles */
 
@@ -244,7 +292,7 @@ a .header-link{
         #down-content-desktop {
             display: block;
             width: 100%;
-           rigth: 0;
+            right: 0;
             /* margin-left: 10%;
            padding: 2% 0 0 0;
             width: 100%;
