--- a/css/html-semantic.css
+++ b/css/html-semantic.css
@@ -1,4 +1,7 @@
-img {
+/* DO NOT USE THIS ------ USE html-semantics.css instead */
+
+
+/*img {
   width: 100%;
 }
 footer {
@@ -7,3 +10,4 @@ footer {
   background-color: #000000;
   clear: left;
 }
+*/
