--- a/css/html-semantic.css
+++ b/css/html-semantic.css
@@ -1,4 +1,4 @@
-/* DO NOT USE THIS ------ USE html-semantics.css instead */
+/* DO NOT USE THIS ------ USE html-semantics.less instead */
 
 
 /*img {
