--- a/less/html-semantics.less
+++ b/less/html-semantics.less
@@ -24,16 +24,18 @@ a img {
     width: 30%;    
 }
 
+/*
 button {
     font-size: @buttonFontSize;
     margin-top: 14%;
     margin-left: 2%;
-    /*padding:25% 0 20% 3;*/
+    padding:25% 0 20% 3;
     text-align: center;
     cursor: pointer;
     border-radius: 12px;
-    /*width: @buttonWidth;*/
+    width: @buttonWidth;
 }
+*/
 
 h2 {
     margin: 2%;
