--- a/less/layout.less
+++ b/less/layout.less
@@ -167,6 +167,10 @@ a .header-link{
     text-align: left!important;
 }
 
+.text-center{
+    text-align: center!important;
+}
+
 .text-large {
     font-size: 18px !important;
 }
