--- a/css/compareNeighborhoods.css
+++ b/css/compareNeighborhoods.css
@@ -1,52 +1,50 @@
+
 #mainDiv {
     /*border: solid deeppink;*/
     width: 100%;
-    height: 40rem;
+    height: 50rem;
     padding: 1% 1%;
 }
-.compareContainer {
+#mainDiv h1{
+  text-align: center;
+  font-size: 0.8rem;
+  margin-top: 6%;
+}
+.compareContainer{
     /*border: solid 2px red;*/
-    float: left;
+    display: flex;
+    flex-wrap: wrap;
 }
-h1{
-    text-align: center;
+.comparison{
+  width:50%;
+  margin: 10px;
 }
-img {
 
+img {
     /*border: 2px solid blue;*/
     border-radius: 2rem;
     height: 12rem;
     width: 17rem;
-    margin: 2% 4%;
+    margin: 2% 10%;
     box-shadow: 10px 10px 5px #888888;
 }
-h3 {
-    margin-left: 2%;
-    text-align: center;
-}
-
 input{
     border: 2px solid chocolate;
-    margin: 1% 18%;
+    margin: 3% 20%;
     padding: 2% 2%;
     width: 12rem;
     border-radius: 10px;
     font-size: 1rem;
 }
-#leftNeighborhood{
-    /*border: 2px solid burlywood;*/
-    float: left;
-}
-#rightNeighborhood{
-    /*border: 2px solid burlywood;*/
-    float: left;
+.text-center{
+  text-align: center!important;
 }
 
 /*media query for desktop*/
 @media only screen and (min-width: 1025px) {
-    .compareContainer{
-        width:100%;
-        padding: 1% 1%;
+    #mainDiv h1{
+      margin-top: 3%;
+      font-size: 1.5rem;
     }
     img{
         width: 30rem;
@@ -55,18 +53,23 @@ input{
     .comparison{
         width:33rem;
         padding: 1% 2%;
-
     }
-    #vsSection{
+    /*#vsSection{
         width:3rem;
         height: 10rem;
         float: left;
         padding-top: 5rem;
         margin-top: 5%;
         font-size: 2rem;
-    }
+    }*/
     input{
         width:17rem;
     }
+
+
+
+
+
+
 
 }
