--- a/css/SuggestionsPage.css
+++ b/css/SuggestionsPage.css
@@ -10,6 +10,7 @@
   top: 0;
   left: 0;
   bottom: 0;
+  margin:0;
 }
 #suggestionMain #suggestionHeader .banner {
   display: inline-block;
@@ -22,7 +23,7 @@
   color: white;
   padding: 02%;
   font-size: 0.92em;
-  width: 86%;
+  width: 96%;
 }
 #suggestionMain #suggestionNames ul {
   list-style: none;
