--- a/less/suggestionsPage.less
+++ b/less/suggestionsPage.less
@@ -9,6 +9,7 @@
         top: 0;
         left: 0;
         bottom: 0;
+        margin:0;
         .banner {
             display: inline-block;
             position: absolute;
@@ -20,7 +21,7 @@
             color: white;
             padding: 02%;
             font-size: 0.92em;
-            width: 86%;
+            width: 96%;
         }
     }
     #suggestionNames {
