--- a/less/layout.less
+++ b/less/layout.less
@@ -1,6 +1,6 @@
 /* added by neha */
 
-body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif  }
 body, html {
     height: 100%;
     line-height: 1.8;
@@ -47,8 +47,8 @@ body, html {
         border-radius: 20%;
     }
     #down {
-        margin: auto;
-        margin-top: 2%;
+      /*  margin: auto;
+        margin-top: 2%;*/
         /* margin-bottom: 2%;
          margin-left: 70%;*/
         .line {
@@ -58,9 +58,9 @@ body, html {
             margin: 6px 0;
         }
         #down-icon {
-            margin-left: 230%;
+           /* margin-left: 230%;*/
         }
-        
+
         #down-content a {
             color: #ffffff;
             padding: 12px 16px;
@@ -148,22 +148,23 @@ position-bottom {
     background-color: #ccc !important;
 }
 
+.lf-button-small{
+    width:30%;
+}
 
 a .header-link{
     color:#fff!important;
 }
 
 .wide{
-    letter-spacing: 4px;
+    letter-spacing: 1px;
 }
-
 
 .text-right{
     text-align: right!important;
 }
 
-
-.text-left{
+.text-right{
     text-align: left!important;
 }
 
@@ -171,12 +172,8 @@ a .header-link{
     text-align: center!important;
 }
 
-.text-large {
-    font-size: 18px !important;
-}
-
 .text-xxxlarge {
-    font-size: 48px !important;
+    font-size: 32px !important;
 }
 
 .text-lighter{
@@ -192,7 +189,7 @@ a .header-link{
 }
 
 .lf-margin-top-xl {
-    margin-top:  30px!important;
+    margin-top: 30px!important;
 }
 
 .lf-margin-top-large {
@@ -211,8 +208,6 @@ a .header-link{
     padding:4px;
 }
 
-
-
 .lf-sidebar{
     height: 100%;
     width: 200px;
@@ -223,6 +218,25 @@ a .header-link{
 
 .lf-card {
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+}
+
+.lf-card-2{
+    margin: 5% 4%;
+    box-shadow: 10px 10px 5px #888888;
+
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+    min-width: 26%;
+    /* max-width: 35%; */
+    height: 100%;
+}
+
+.lf-card-block{
+    text-align: center;
+    padding: 1.25rem;
+}
+.lf-shadow{
+    box-shadow: 5px 5px 2px #888888;
 }
 
 .lf-animate-right {
@@ -241,7 +255,6 @@ a .header-link{
     }
 }
 
-
 /*end new styles */
 
 @media only screen and (min-width: 1025px) {
@@ -253,7 +266,7 @@ a .header-link{
 
 
 
-/* mobile orientation: landscape */
+/* mobile orientation: landscape
 
 @media only screen and (min-device-width: 314px) and (max-device-width: 768px) and (orientation: landscape) {
     #nav {
@@ -262,9 +275,9 @@ a .header-link{
         }
     }
 }
+*/
 
-
-/* ipad orientation: potrait */
+/* ipad orientation: potrait
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
     #nav {
@@ -273,9 +286,9 @@ a .header-link{
         }
     }
 }
+*/
 
-
-/* ipad orientation: landscape */
+/* ipad orientation: landscape
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
     #nav {
@@ -284,9 +297,17 @@ a .header-link{
         }
     }
 }
-
+*/
 
 /*Desktop*/
+
+@media only screen and (min-width: 1025px) {
+    .lf-card-2{
+        min-width: 26%;
+        /* max-width: 35%; */
+        height: 100%;
+    }
+}
 
 @media only screen and (min-width: 1025px) {
     #nav {
@@ -296,7 +317,8 @@ a .header-link{
         #down-content-desktop {
             display: block;
             width: 100%;
-            right: 0;
+           rigth: 0;
+
             /* margin-left: 10%;
            padding: 2% 0 0 0;
             width: 100%;
@@ -312,6 +334,15 @@ a .header-link{
             padding: 2%;
         }
     }
+
+    .wide{
+        letter-spacing: 4px;
+    }
+
+    .text-xxxlarge {
+        font-size: 48px !important;
+    }
+
 }
 
 /* end neha */
