--- a/css/layout.css
+++ b/css/layout.css
@@ -132,11 +132,14 @@ position-bottom {
   color: #000 !important;
   background-color: #ccc !important;
 }
+.lf-button-small {
+  width: 30%;
+}
 a .header-link {
   color: #fff!important;
 }
 .wide {
-  letter-spacing: 4px;
+  letter-spacing: 1px;
 }
 .text-right {
   text-align: right!important;
@@ -144,12 +147,11 @@ a .header-link {
 .text-right {
   text-align: left!important;
 }
-
 .text-center {
   text-align: center!important;
 }
 .text-xxxlarge {
-  font-size: 48px !important;
+  font-size: 32px !important;
 }
 .text-lighter {
   font-weight: lighter;
@@ -186,6 +188,22 @@ a .header-link {
 .lf-card {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
+.lf-card-2 {
+  margin: 5% 4%;
+  box-shadow: 10px 10px 5px #888888;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: .25rem;
+  min-width: 26%;
+  /* max-width: 35%; */
+  height: 100%;
+}
+.lf-card-block {
+  text-align: center;
+  padding: 1.25rem;
+}
+.lf-shadow {
+  box-shadow: 5px 5px 2px #888888;
+}
 .lf-animate-right {
   position: relative;
   animation: animateright 0.4s;
@@ -207,25 +225,44 @@ a .header-link {
     flex-direction: row;
   }
 }
-/* mobile orientation: landscape */
+/* mobile orientation: landscape
+
 @media only screen and (min-device-width: 314px) and (max-device-width: 768px) and (orientation: landscape) {
-  #nav #down {
-    margin-left: 55%;
-  }
+    #nav {
+        #down {
+            margin-left: 55%;
+        }
+    }
 }
-/* ipad orientation: potrait */
+*/
+/* ipad orientation: potrait
+
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-  #nav #down {
-    margin-left: 65%;
-  }
+    #nav {
+        #down {
+            margin-left: 65%;
+        }
+    }
 }
-/* ipad orientation: landscape */
+*/
+/* ipad orientation: landscape
+
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
-  #nav #down {
-    margin-left: 75%;
+    #nav {
+        #down {
+            margin-left: 75%;
+        }
+    }
+}
+*/
+/*Desktop*/
+@media only screen and (min-width: 1025px) {
+  .lf-card-2 {
+    min-width: 26%;
+    /* max-width: 35%; */
+    height: 100%;
   }
 }
-/*Desktop*/
 @media only screen and (min-width: 1025px) {
   #nav #down {
     display: none;
@@ -245,6 +282,12 @@ a .header-link {
   #indexMain .feature {
     width: 25%;
     padding: 2%;
+  }
+  .wide {
+    letter-spacing: 4px;
+  }
+  .text-xxxlarge {
+    font-size: 48px !important;
   }
 }
 /* end neha */
