--- a/less/brand.less
+++ b/less/brand.less
@@ -45,6 +45,11 @@ h2 {
     color: @white;
 }
 
+.lf-black{
+    color: #fff!important;
+    background-color: #000!important;
+}
+
 .lf-red{
     color: @white !important;
     background-color:@red!important;
