--- a/css/brand.css
+++ b/css/brand.css
@@ -1,4 +1,5 @@
 /*Colors*/
+/*Colors*/
 footer,
 header {
   color: #000 !important;
@@ -24,14 +25,14 @@ h2 {
 .lf-text-color {
   color: #ffffff;
 }
-.lf-text-white {
+.lf-white {
   color: #fff;
+}
+.lf-black {
+  color: #fff!important;
+  background-color: #000!important;
 }
 .lf-red {
   color: #fff !important;
   background-color: #f44336 !important;
-}
-
-.lf-text-grey, .lf-hover-text-grey:hover{
-  color: #757575!important;
 }
