--- a/css/layout.css
+++ b/css/layout.css
@@ -6,7 +6,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Raleway", sans-serif;
+  /*font-family: "Raleway", sans-serif;*/
+  font-family: 'Philosopher', sans-serif;
 }
 body,
 html {
