--- a/css/SuggestionsPage.css
+++ b/css/SuggestionsPage.css
@@ -62,6 +62,10 @@
   display: flex;
   flex-direction: column;
 }
+#school
+{
+  width:40%;
+}
 /*Desktop*/
 @media only screen and (min-width: 1025px) {
   #suggestionMain {
