--- a/css/map.css
+++ b/css/map.css
@@ -53,9 +53,8 @@ a:hover {
 }
 
 @media only screen and (min-width: 1025px) {
-
 .mapPage{
-    background-color:black;  
+    background-color:#f9cccc;  
     overflow: auto;
 }
 
@@ -63,6 +62,7 @@ a:hover {
 img {
   border-radius: 12px;
   position: flex;
+  opacity:0.65;
 }
 
 .imagemap__item {
@@ -117,17 +117,21 @@ a:hover {
 
 .mapText{
     color:#ffffff;
-    opacity:0.8;
-    font-size: 23px;
+    font-size: 22px;
     font-weight: bold;
-    text-shadow: 3px 3px 5px #939393;
+    text-shadow: 4px 4px 6px #f78a8a;
 }
 
 .mapTextTitle{
-    color:#cccccc;
-    text-shadow: 3px 3px 5px #444444;
+    color:#f78a8a;
+    text-shadow: 4px 4px 6px #444444;
     font-size:33px;
     font-weight:bold;
 }
 }
 /* map section ended by Amanda*/
+
+
+.heart {
+    cursor: url("../image/smallHeart.png"), pointer;
+}
