common prop no margin added

--- a/less/layout.less
+++ b/less/layout.less
@@ -196,6 +196,10 @@ a .header-link{
     margin-top: 28px!important;
 }
 
+.lf-no-margin{
+    margin:0;
+}
+
 .lf-large {
     font-size: 18px!important;
 }
