--- a/css/layout.css
+++ b/css/layout.css
@@ -169,6 +169,11 @@ a .header-link {
 .lf-margin-top-large {
   margin-top: 28px!important;
 }
+
+.lf-no-margin{
+    margin:0;
+}
+
 .lf-large {
   font-size: 18px!important;
 }
