--- a/less/brand.less
+++ b/less/brand.less
@@ -54,3 +54,7 @@ h2 {
     color: @white !important;
     background-color:@red!important;
 }
+
+.lf-text-darkred{
+    color:darkred !important;
+}
