--- a/less/suggestionsPage.less
+++ b/less/suggestionsPage.less
@@ -2,7 +2,7 @@
     position: relative;
     #suggestionHeader {
         background-image: url("../image/suggestionMain.jpg");
-        background-repeat: no-repeat;
+
         background-size: contain;
         min-height: 250px;
         min-width: 250px;
@@ -24,26 +24,26 @@
             width: 96%;
         }
     }
-    #suggestionNames {
+  /*  #suggestionNames {
         ul {
             list-style: none;
             text-align: center;
             font-family: cursive;
             font-size: 1.5em;
         }
-    }
+    }*/
     #suggestedArea {
         margin: 0;
     }
     .graphicsWrapper {
-        margin: 2% 0 3% 0;
+        /*margin: 2% 0 3% 0;*/
         border-radius: 3%;
         .graphicsContainer {
-            height: 300px;
-            margin: 5% 0;
-            border-top: solid;
+            height: 310px;
+            margin: 0 4% 4% 4%;
+            /* border-top: solid;
             border-bottom: solid;
-            /*  margin-right: 100%;
+             margin-right: 100%;
             margin-top: 25%;
             width: 100%;*/
             div {
@@ -73,6 +73,8 @@
             background-image: url("../image/suggestionMainDesktop.jpg");
             background-size: 100% 100%;
             margin-top: 4%;
+            min-height: 367px;
+            background-repeat: no-repeat;
         }
         #suggestionNames {
             margin-top: 5%;
@@ -98,6 +100,11 @@
         #transportation.graphicsContainer{
             margin:0;
         }
+    }
+
+    h2{
+        padding-top:3%;
+        margin:0;
     }
 }
 
