--- a/css/SuggestionsPage.css
+++ b/css/SuggestionsPage.css
@@ -1,16 +1,23 @@
 #suggestionMain {
   position: relative;
+  /*  #suggestionNames {
+        ul {
+            list-style: none;
+            text-align: center;
+            font-family: cursive;
+            font-size: 1.5em;
+        }
+    }*/
 }
 #suggestionMain #suggestionHeader {
   background-image: url("../image/suggestionMain.jpg");
-  background-repeat: no-repeat;
   background-size: contain;
   min-height: 250px;
   min-width: 250px;
   top: 0;
   left: 0;
   bottom: 0;
-  margin:0;
+  margin: 0;
 }
 #suggestionMain #suggestionHeader .banner {
   display: inline-block;
@@ -25,25 +32,19 @@
   font-size: 0.92em;
   width: 96%;
 }
-#suggestionMain #suggestionNames ul {
-  list-style: none;
-  text-align: center;
-  font-family: cursive;
-  font-size: 1.5em;
-}
 #suggestionMain #suggestedArea {
   margin: 0;
 }
 #suggestionMain .graphicsWrapper {
-  margin: 2% 0 3% 0;
+  /*margin: 2% 0 3% 0;*/
   border-radius: 3%;
 }
 #suggestionMain .graphicsWrapper .graphicsContainer {
-  height: 300px;
-  margin: 5% 0;
-  border-top: solid;
-  border-bottom: solid;
-  /*  margin-right: 100%;
+  height: 310px;
+  margin: 0 4% 4% 4%;
+  /* border-top: solid;
+            border-bottom: solid;
+             margin-right: 100%;
             margin-top: 25%;
             width: 100%;*/
 }
@@ -58,14 +59,6 @@
   width: 100%;
   margin-bottom: 4% !important;
 }
-.mobileLayout {
-  display: flex;
-  flex-direction: column;
-}
-#school
-{
-  width:40%;
-}
 /*Desktop*/
 @media only screen and (min-width: 1025px) {
   #suggestionMain {
@@ -75,6 +68,8 @@
     background-image: url("../image/suggestionMainDesktop.jpg");
     background-size: 100% 100%;
     margin-top: 4%;
+    min-height: 367px;
+    background-repeat: no-repeat;
   }
   #suggestionMain #suggestionNames {
     margin-top: 5%;
@@ -99,10 +94,8 @@
   #suggestionMain #transportation.graphicsContainer {
     margin: 0;
   }
-}
-@media only screen and (min-width: 1025px) {
-  .desktopLayout {
-    display: flex;
-    flex-direction: row;
+  h2 {
+    padding-top: 3%;
+    margin: 0;
   }
 }
