--- a/less/layout.less
+++ b/less/layout.less
@@ -311,6 +311,9 @@ a .header-link{
         /* max-width: 35%; */
         height: 100%;
     }
+     .lf-small-margin{
+        margin: 1%;
+    }
 }
 
 @media only screen and (min-width: 1025px) {
