--- a/css/brand.css
+++ b/css/brand.css
@@ -17,7 +17,7 @@ a {
   color: #ffffff;
 }
 .graphicsWrapper {
-  background-color: #003366;
+  /*background-color: #003366;*/
 }
 h2 {
   color: #ffffff;
