--- a/less/layout.less
+++ b/less/layout.less
@@ -1,6 +1,6 @@
 /* added by neha */
 
-body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif  }
+body,h1,h2,h3,h4,h5,h6 {font-family: "Philosopher", "Raleway", sans-serif  }
 body, html {
     height: 100%;
     line-height: 1.8;
