--- a/css/layout.css
+++ b/css/layout.css
@@ -77,6 +77,13 @@ html {
   background-color: #707070;
   z-index: 1;
 }
+
+.sticky-top {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+}
 .mobileLayout {
   display: flex;
   flex-direction: column;
@@ -214,6 +221,12 @@ a .header-link {
   position: relative;
   animation: animateright 0.4s;
 }
+
+.lf-animate-right-slow {
+  position: relative;
+  animation: animateright 0.8s;
+}
+
 @keyframes animateright {
   0% {
     right: -800px;
@@ -230,6 +243,22 @@ a .header-link {
     display: flex;
     flex-direction: row;
   }
+}
+
+
+@keyframes animateleft {
+  0% {
+    left: -800px;
+    opacity: 0;
+  }
+  100% {
+    left: 0;
+    opacity: 1;
+  }
+}
+.lf-animate-left-slow {
+  position: relative;
+  animation: animateleft 0.8s;
 }
 /* mobile orientation: landscape
 
@@ -271,6 +300,9 @@ a .header-link {
   .lf-small-margin {
     margin: 1%;
   }
+    .lf-margin-top {
+    margin-top: 30px!important;
+  }
 }
 @media only screen and (min-width: 1025px) {
   #nav #down {
@@ -278,8 +310,9 @@ a .header-link {
   }
   #nav #down-content-desktop {
     display: block;
-    width: 100%;
-    rigth: 0;
+  /* width: 100%;
+    right: 0;*/
+    left:0;
     /* margin-left: 10%;
            padding: 2% 0 0 0;
             width: 100%;
