--- a/less/index.less
+++ b/less/index.less
@@ -1,18 +1,22 @@
-//start by sirisha
-//card section styling
+
 
 .bg-main {
     background-position: center;
     background-size: cover;
-    background-image: url("../image/NightSeattle2.jpg");
+    background-image: url("../image/Seattle-skyline4.png");
     min-height: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.lf-transform{
+  transform: translate3d(0px, -43.6107px, 0px) scale(1) rotate(0deg);
 }
 
 .display-main{
     position: relative;
 }
- // start add by sirisha
- //start by Sirisha
+
 
 html{
     overflow-x: hidden;
@@ -21,7 +25,7 @@ html{
 
 @media only screen and (min-width: 1025px) {
 
-  //start by Sirisha
+
   #optionsSection{
     height: 42rem;
   }
@@ -39,6 +43,7 @@ html{
   #optionsSection h2{
     margin-top: 3%;
   }
+    
   img {
     opacity: 0.9;
     display: block;
@@ -46,6 +51,7 @@ html{
     height: 40%;
     cursor:pointer;
   }
+    
   .card:hover img {
     opacity: 0.7;
   }
@@ -62,4 +68,4 @@ html{
     margin-bottom: 7%;
   }
 }
-  /*end by Sirisha*/
+
