--- a/css/index.css
+++ b/css/index.css
@@ -1,93 +1,58 @@
-/* modified by neha */
-/*
-#indexMain {
-   #descr {
-       position: relative;
-       top: -10px;
-   }
- .feature {
-       button {
-           padding: 6%;
-           margin-top: 0;
-       }
-   }
-}
-*/
-/*Added by Sirisha*/
-/*To stop horizontal scrolling in mobile*/
-html {
-    overflow-x: hidden;
-}
 .bg-main {
   background-position: center;
   background-size: cover;
-  background-image: url("../image/NightSeattle2.jpg");
+  background-image: url("../image/Seattle-skyline4.png");
   min-height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+.lf-transform {
+  transform: translate3d(0px, -43.6107px, 0px) scale(1) rotate(0deg);
 }
 .display-main {
   position: relative;
 }
-
-.cardButton{
-    background-color: indianred;
-    border: 2px solid #757575;
-    box-shadow:5px 5px 2px #888888 ;
-    width: 20%;
-    height: 3rem;
-    margin-bottom: 2%;
+html {
+  overflow-x: hidden;
 }
 /*Desktop*/
-
 @media only screen and (min-width: 1025px) {
-
-    /*#indexMain {
-        #features {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-around;
-        }
-    }*/
-
-    /*Start by sirisha*/
-    #optionsSection{
-        height: 42rem;
-    }
-    #optionsSection h2{
-        margin-top: 3%;
-    }
-    .cardButton {
-        width: 30%;
-        margin-bottom: 2%;
-        margin-left: 30%;
-    }
-    .card {
-        margin: 2% 4%;
-        box-shadow: 10px 10px 5px #888888;
-        height: 28rem;
-
-    }
-    img {
-        opacity: 0.9;
-        display: block;
-        width: 100%;
-        height: 40%;
-        cursor: pointer;
-    }
-    .card:hover img {
-        opacity: 0.7;
-    }
-
-    .card-block{
-        text-align: center;
-    }
-    .card-group{
-        margin: 2% 4%;
-    }
-    .cardButton{
-        width: 40%;
-        height: 3rem;
-        margin-bottom: 7%;
-    }
-    /*end by Sirisha*/
+  #optionsSection {
+    height: 42rem;
+  }
+  .cardButton {
+    width: 30%;
+    margin-bottom: 2%;
+    margin-left: 30%;
+  }
+  .card {
+    margin: 2% 4%;
+    box-shadow: 10px 10px 5px #888888;
+    height: 28rem;
+  }
+  #optionsSection h2 {
+    margin-top: 3%;
+  }
+  img {
+    opacity: 0.9;
+    display: block;
+    width: 100%;
+    height: 40%;
+    cursor: pointer;
+  }
+  .card:hover img {
+    opacity: 0.7;
+  }
+  .card-block {
+    text-align: center;
+  }
+  .card-group {
+    margin: 2% 4%;
+  }
+  .cardButton {
+    width: 40%;
+    height: 3rem;
+    margin-bottom: 7%;
+  }
 }
-/* end neha */
+/*end by Sirisha*/
