--- a/less/suggestionsPage.less
+++ b/less/suggestionsPage.less
@@ -1,40 +1,19 @@
-#suggestionMain {
-    position: relative;
-    #suggestionHeader {
-        background-image: url("../image/suggestionMain.jpg");
 
-        background-size: contain;
-        min-height: 250px;
-        min-width: 250px;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        margin:0;
-        .banner {
-            display: inline-block;
-            position: absolute;
-            height: auto;
-            top: 0;
-            margin: 0;
-            margin-top: 4%;
-            background-color: rgba(0, 0, 0, .45);
-            color: white;
-            padding: 02%;
-            font-size: 0.92em;
-            width: 96%;
-        }
-    }
-  /*  #suggestionNames {
-        ul {
-            list-style: none;
-            text-align: center;
-            font-family: cursive;
-            font-size: 1.5em;
-        }
-    }*/
-    #suggestedArea {
-        margin: 0;
-    }
+.banner {
+    display: inline-block;
+    position: absolute;
+    height: auto;
+    margin: 0;
+    margin-top: 34%;
+    background-color: rgba(0, 0, 0, .45);
+    color: white;
+    padding: 02%;
+    font-size: 0.92em;
+    width: 96%;
+}
+
+
+
     .graphicsWrapper {
         /*margin: 2% 0 3% 0;*/
         border-radius: 3%;
@@ -60,51 +39,45 @@
     width: 100%; 
     margin-bottom:4% !important;
     }
+
+
+    .visible{
+        display: none;
+    }
+
+#graphs{
+    display: none;
 }
-
-
-
 /*Desktop*/
 
+
 @media only screen and (min-width: 1025px) {
-    #suggestionMain {
-        position: relative;
-        #suggestionHeader {
-            background-image: url("../image/suggestionMainDesktop.jpg");
-            background-size: 100% 100%;
-            margin-top: 4%;
-            min-height: 367px;
-            background-repeat: no-repeat;
+
+
+    .graphicsWrapper {
+        width: 100%;
+        /*margin: 3%;*/
+        border-radius: 3%;
+        /*padding: 3% 0 3% 0;*/
+        .graphicsContainer {
+            border: 0;
         }
-        #suggestionNames {
-            margin-top: 5%;
-        }
-        .graphicsWrapper {
-            width: 100%;
-            /*margin: 3%;*/
-            border-radius: 0;
-            /*padding: 3% 0 3% 0;*/
-            .graphicsContainer {
-                border: 0;
-            }
-            div canvas {
-                width: 95% !important;
-                padding: 2%;
-            }
-        }
-        .graphicItem{
-         margin-bottom:0 !important;
-         height: 60%; 
-        }
-        
-        #transportation.graphicsContainer{
-            margin:0;
+        div canvas {
+            width: 95% !important;
+            padding: 2%;
         }
     }
+    .graphicItem{
+        margin-bottom:0 !important;
+        height: 60%;
+    }
 
-    h2{
-        padding-top:3%;
-        margin:0;
+    .map-marker-text {
+        margin-top: -18px;
+        font-size: 0.6em;
+        margin-left: 4px!important;}
+
+    .visible{
+        display: block;
     }
 }
-
