--- a/less/layout.less
+++ b/less/layout.less
@@ -180,6 +180,18 @@ a .header-link{
     text-align: center!important;
 }
 
+.lf-normal{
+    font-size: 15px!important;
+}
+
+.lf-large {
+    font-size: 18px!important;
+}
+
+.lf-xlarge {
+    font-size: 28px!important;
+}
+
 .text-xxxlarge {
     font-size: 32px !important;
 }
@@ -192,8 +204,20 @@ a .header-link{
     padding: 12px 24px!important;
 }
 
+.lf-padding-xlarge {
+    padding: 45px 38px!important;
+}
+
+.lf-padding-small {
+    padding: 10px 20px!important;
+}
+
 .lf-margin-top {
     margin-top: 16px!important;
+}
+
+.lf-margin-top-large {
+    margin-top: 28px!important;
 }
 
 .lf-margin-top-xl {
@@ -349,6 +373,9 @@ a .header-link{
     }
         .lf-margin-top{
         margin-top: 30px!important;
+    }
+    .lf-margin-top-xxl{
+        margin-top: 80px!important;
     }
 }
 
