--- a/css/brand.css
+++ b/css/brand.css
@@ -1,4 +1,6 @@
 /*Colors*/
+/*#e9ece5  #ddeeeb*/
+/* rgb(0, 51, 102);*/
 
 footer,
 header {
@@ -6,24 +8,30 @@ header {
   background-color: #fff !important;
 }
 button {
-  background-color: #2E73AC;
+  background-color: #2dbcb6;
   color: #ffffff;
 }
 #descr {
-  background-color: #050F1E;
-  color: #ffffff;
+  background-color: #e9ece5;
+  color: #3b3a36;
 }
 a {
-  color: #ffffff;
+  color: #2dbcb6;
+}
+.lf-link {
+  color: #2dbcb6;
+}
+.lf-link:hover {
+  color: #96dedb !important;
 }
 .graphicsWrapper {
-  /*background-color: #003366;*/
+  /* background-color: @graphicBgColor;*/
 }
 h2 {
-  color: #ffffff;
+  color: #3b3a36;
 }
 .lf-text-color {
-  color: #ffffff;
+  color: #3b3a36;
 }
 .lf-text-white {
   color: #fff;
@@ -36,6 +44,22 @@ h2 {
   color: #fff !important;
   background-color: #f44336 !important;
 }
-.lf-text-darkred{
-    color:darkred !important;
+.lf-text-darkred {
+  color: darkred !important;
+}
+.lf-button-brand {
+  background-color: #2dbcb6 !important;
+  color: #ffffff !important;
+}
+.lf-bg {
+  background-color: #e9ece5;
+  color: #3b3a36;
+}
+.lf-bg1 {
+  background-color: #c0dfd9;
+  color: #3b3a36;
+}
+.lf-card-2 {
+  background-color: #fff;
+  /*color:#2dbcb6;*/
 }
